Hotfixes:
Ship correctly formed audio
- source frame starts at negative number to compensate for segment preroll
- actual microseconds-since-epoch to begin segment audio does not include waveform preroll- we factor that in above, during source audio reading

Resolve NPE at beginning of each main program
- null check deltaIn and deltaOut when testing them